# greenpak-configurator

./: CMakeLists.txt  README.md  rgb_project.gp6  simple_project.gp6  test_script.txt
common/: protocol.h
firmware/esp_firmware/: platformio.ini
firmware/esp_firmware/include/: commanddispatchers.h  commandreception.h  i2ccommunication.h  projectpatching.h  protocol.h  serialsystem.h
firmware/esp_firmware/src/: commanddispatchers.cpp  commandreception.cpp  i2ccommunication.cpp  main.cpp  projectpatching.cpp  serialsystem.cpp
include/: scriptprocessing.h  serial.h
src/: main.cpp  scriptprocessing.cpp  serial.cpp
